--- a/thirdproject.html
+++ b/thirdproject.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <meta charset="UTF-8">
        <title>meeno's website</title>
-       <link rel="stylesheet" href="thirdproject.css">
+       <link rel="stylesheet" href="styles.css">
     </head>
         <body>
              <header class="header">
-<h1>Reliable, efficient delivery</h1>
-<h1>powered by Technology</h1>
-<p>our Artificial Intelligence powered tools ude millions of project data points to ensure that your project is successful </header>
-</header>
+                <h1>Reliable, efficient delivery</h1>
+                <h1>powered by Technology</h1>
+                <p>our Artificial Intelligence powered tools ude millions of project data points to ensure that your project is successful </p>
+            </header>
 
-<section class="section1">
-    <div class="grid" style="border-top-color: turquoise;">
-        <h3>supervisor</h3>
-        <p>monitors activity to identify project roadblocks</p>
-    </div>
-    <div class="grid" style="border-top-color: red">
-        <h3>Team Builder</h3>
-        <p>Scans our talent network to create the optional team for your project</p>
-    </div>
+        <section class="card-container">
+            <div class="card card--supervisor">
+                <h3>supervisor</h3>
+                <p>monitors activity to identify project roadblocks</p>
+            </div>
+        <div class="card-combined">
+            <div class="card card--teambuilder">
+                <h3>Team Builder</h3>
+                <p>Scans our talent network to create the optional team for your project</p>
+            </div>
 
-    <div class="grid grid3"style="border-top-color: gold">
-        <h3>karma</h3>
-        <p>regularly evaluates our talent to ensure quality</p>
-    </div>
-    
-    |<div class="grid grid4"style="border-top-color: blue">
-       <h3>calculator</h3>
-       <p>
-        users data from past projects better delivery estimates</p>
-    </div>
-    </section>
+            <div class="card card--karma">
+                <h3>karma</h3>
+                <p>regularly evaluates our talent to ensure quality</p>
+            </div>
+        </div>
+            
+            |<div class="card card--calculator">
+            <h3>calculator</h3>
+            <p>
+                users data from past projects better delivery estimates</p>
+            </div>
+            </section>
 
 </body>
 
